JavaIo and JavaUtilFunction green